# trf_scraper

./: .gitignore  README.md  form_request.py  pyproject.toml  trf_spider.py
requests/: form_request.py  parte_request.py
